# EEG2Text-Experiment

./: .gitignore  20260131_2333-raw.fif  README.md  eeg_config.py  eeg_headset.py  eeg_headset_mock.py  experiment.py  fb.json  gui.py  main.py  mock_bacore.py  project_contents.txt  pyproject.toml  requirements.txt  test_eeg_connection.py  test_existing_eeg_headset.py  test_mock.py  which
data-acquisition-framework/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
data-acquisition-framework/docs/diagrams/: architecture.drawio  example_sequencer_logic.drawio
data-acquisition-framework/docs/source/: conf.py  index.rst
data-acquisition-framework/docs/source/about/: index.rst
data-acquisition-framework/docs/source/catalog/: index.rst
data-acquisition-framework/docs/source/changelog/: index.rst
data-acquisition-framework/src/data_acquisition/: eventful_screen.py  types.py
data-acquisition-framework/tests/eeg_headset/: test_eeg_headset.py
data-acquisition-framework/tests/event_manager/: test_composite_event_manager.py  test_correct_incorrect_event_manager.py  test_event_manager.py  test_fixed_timeout_event_manager.py  test_key_press_event_manager.py  test_random_timeout_event_manager.py  test_simple_event_manager.py
data-acquisition-framework/tests/events/: test_event.py  test_gui_event.py  test_key_press_event.py  test_timeout_event.py
data-acquisition-framework/tests/sequencers/: test_block_screen_sequencer.py  test_fixation_cross_screen_sequencer.py  test_predefined_screen_sequencer.py  test_screen_sequencer.py  test_text_screen_sequencer.py
data-acquisition-framework/ui_tests/: draw_text_test.py  pygame_gui_test.py  screen_test.py
eeg-headset/: main.py  (+5 more)
experiment/: Dockerfile  EDA.ipynb  README.md  audio_manager.py  docker-compose.yml  eeg_config.py  eeg_headset.py  experiment.py  fb.json  final_test_eeg_data.raw.fif  gui.py  main.py  memory_task.fif  project_contents.txt  pyproject.toml  requirements.txt  run.sh  run_eeg_headset.sh  run_experiment.sh  setup.sh  stimuli.py  test2.py  test_complete_eeg_functionality.py  test_eeg_data.fif
experiment/eeg-headset/: test.py
experiment/src/: app_sequencer_builder.py  audio_screen.py  config.py  constants.py  question_screen.py  reading_time_analyzer.py  run.py  sentence_sequencer.py  sentences.py
experiment/src/assets/: add_sentences_audio_paths.py  audio_sentences.json  normal_sentences.json  sentiment_sentences.json
(+102 files in other folders)
